# Computational-Geometry-Algorithm

./: CMakeLists.txt  README.md  bst.h  edge.cpp  essential.h  main.cpp  vector.cpp
exe/: note.txt
input/: test.crd
output/: test.plt
source/: bst.h  convex_hull.cpp  convex_hull.h  edge.cpp  edge.h  essential.h  face.cpp  face.h  face_node.cpp  face_node.h  main.cpp  math.cpp  math.h  sweep_line.cpp  sweep_line.h  tri_flipper.cpp  tri_flipper.h  vector.cpp  vector.h  vertex.cpp  vertex.h
